finished angular animations section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
       <hr>
       <div
         style="width: 100px; height:100px" 
-        [@divState]="state"></div>
+        [@divState]="state"
+        (@divState.start)="animationStarted($event)"
+        (@divState.done)="animationEnded($event)"></div>
         <br>
         <div
         style="width: 100px; height:100px" 
@@ -25,6 +27,21 @@
         <li
           class="list-group-item"
           (click)="onDelete(item)"
+          [@list1]
+          *ngFor="let item of list">
+          {{ item }}
+        </li>
+      </ul>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          (click)="onDelete(item)"
+          [@list2]
           *ngFor="let item of list">
           {{ item }}
         </li>
